implement complete. reserve, confirm, restock and cancel reserve works. + automatic admin ui update using rabbitmq events with signalr  sexy shit

--- a/eShopOnWeb-main/eShopOnWeb-main/src/BlazorAdmin/Pages/CatalogItemPage/List.razor
+++ b/eShopOnWeb-main/eShopOnWeb-main/src/BlazorAdmin/Pages/CatalogItemPage/List.razor
@@ -53,7 +53,7 @@ else
                     <td>@(item.Total - item.Reserved)</td>
                     <td>
                         <input type="number" min="1" @bind="restockAmounts[item.Id]" style="width:70px" />
-                        <button class="btn btn-success" @onclick="() => RestockClick(item.Id)">Restock</button>
+                        <button class="btn btn-success" @onclick="() => RestockClick(item.Id)" @onclick:stopPropagation="true">Restock</button>
                     </td>
                     <td>@item.Description</td>
                     <td>@item.Price</td>
