--- a/eShopOnWeb-main/eShopOnWeb-main/src/BlazorAdmin/Pages/CatalogItemPage/List.razor
+++ b/eShopOnWeb-main/eShopOnWeb-main/src/BlazorAdmin/Pages/CatalogItemPage/List.razor
@@ -52,7 +52,7 @@ else
                     <td>@item.Reserved</td>
                     <td>@(item.Total - item.Reserved)</td>
                     <td>
-                        <input type="number" min="1" @bind="restockAmounts[item.Id]" style="width:70px" />
+                        <input @onclick:stopPropagation="true" type="number" min="1" @bind="restockAmounts[item.Id]" style="width:70px" />
                         <button class="btn btn-success" @onclick="() => RestockClick(item.Id)" @onclick:stopPropagation="true">Restock</button>
                     </td>
                     <td>@item.Description</td>
